specialkeys_c.h included in the project and in specialkeys.c

--- a/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj
+++ b/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="..\..\..\src\axtls\ssl.h" />
     <ClInclude Include="..\..\..\src\axtls\tls1.h" />
     <ClInclude Include="..\..\..\src\axtls\version.h" />
+    <ClInclude Include="..\..\..\src\event\wp8\specialkeys_c.h" />
     <ClInclude Include="..\..\..\src\init\demo.h" />
     <ClInclude Include="..\..\..\src\init\globals.h" />
     <ClInclude Include="..\..\..\src\init\settings.h" />
