--- a/LitebaseSDK/builders/vc2013/litebase.vcxproj
+++ b/LitebaseSDK/builders/vc2013/litebase.vcxproj
@@ -429,7 +429,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native;$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native/parser;$(SolutionDir)/../../src/nm/io;$(SolutionDir)/../../src/nm/lang;$(SolutionDir)/../../src/util;$(SolutionDir)/../../src/tcvm;P:\gitrepo\TotalCross\TotalCrossVM\src\nm\ui\wp8;P:\gitrepo\angleproject\samples\gles2_book\Common;P:\gitrepo\angleproject\include;P:\gitrepo\angleproject\src\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>LB_EXPORTS;LITTLE_ENDIAN;WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;WP8;WINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP;UNICODE;_WINDLL;_USRDLL</PreprocessorDefinitions>
+      <PreprocessorDefinitions>LB_EXPORTS;LITTLE_ENDIAN;WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;WP8;WINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP;UNICODE;_WINDLL;_USRDLL;_UNICODE</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
